--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
     - name: clone repo and submodules
       uses: actions/checkout@v3
       with:
-        token: ${{ secrets.ACTION_TOKEN }}
+        token: ${{ secrets.ACTIONS_TOKEN }}
         submodules: true
     - name: set up JDK 11
       uses: actions/setup-java@v2
