--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -65,17 +65,14 @@ jobs:
             appium -v
             appium &>/dev/null &
 
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: list app folder before QA script
-      run: |
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#    - name: list app folder before QA script
+#      run: |
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
     - name: QA Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
