--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,20 +33,29 @@ jobs:
       with:
           id: app_id
           name: app
-          path: app/build/outputs/apk/debug/app-debug.apk
+          psth: onbeat-qa-automation-android/src/main/resources/app-debug.apk
+#          path: app/build/outputs/apk/debug/app-debug.apk
     - name: Download APK
       uses: actions/download-artifact@v1
       with:
           name: app
 
-    - name: list app folder
-      run: |
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#    - name: list app folder
+#      run: |
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+     - name: list app folder
+       run: |
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
+          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
     - name: Open and list sub-dir
       run: |
         chmod +x ./onbeat-qa-automation-android/src/test/java/com/qa/runners/MyRunnerTest.java
