--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -49,17 +49,14 @@ jobs:
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
 
-#            - name: list app folder
-#                run: |
-#                  ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-#                  ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-#                  chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-#                  chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-#                  ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-#                  ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-
-
-
+    - name: list app folder
+      run: |
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
     - name: Open and list sub-dir
       run: |
