--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,14 +40,14 @@ jobs:
       with:
           name: app
 
-    - name: list app folder
-      run: |
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#    - name: list app folder
+#      run: |
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
 
     - name: list app folder
       run: |
