--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,7 @@ jobs:
       with:
           id: app_id
           name: app
-          psth: onbeat-qa-automation-android/src/main/resources/app-debug.apk
+          path: onbeat-qa-automation-android/src/main/resources/app-debug.apk
 #          path: app/build/outputs/apk/debug/app-debug.apk
     - name: Download APK
       uses: actions/download-artifact@v1
