--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,10 +34,6 @@ jobs:
           id: app_id
           name: app
           path: app/build/outputs/apk/debug/app-debug.apk
-          env-url: FOOBAR
-
-    - name: Use URL for something
-      run: echo "${{ env.FOOBAR }}
 
     - name: Download APK
       uses: actions/download-artifact@v1
@@ -59,8 +55,8 @@ jobs:
       run: |
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+        chmod o+rx /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+        chmod o+rx /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
