--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,8 +55,8 @@ jobs:
       run: |
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-        chmod o+rx /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-        chmod o+rx /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
