--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,23 +42,23 @@ jobs:
           name: app
           path: /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
-#    - name: list app folder
-#      run: |
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-
     - name: list app folder
       run: |
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+
+#    - name: list app folder
+#      run: |
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
     - name: Open and list sub-dir
       run: |
@@ -88,14 +88,16 @@ jobs:
 #          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
 #          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
-#    - name: list app folder before QA script
-#      run: |
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+    - name: list app folder before QA script
+      run: |
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+
+
     - name: QA Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
