--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -91,7 +91,7 @@ jobs:
     - name: list app folder before QA script
       run: |
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la ../../../../../../../home/runner/work/onbeatcicd/onbeatcicd/app/build
+        ls -la ../../../../../../../app/build
         ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
         chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
         chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
