--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -65,19 +65,20 @@ jobs:
         chmod +x ./onbeat-qa-automation-android/src/test/java/com/qa/runners/MyRunnerTest.java
         ls -la ./onbeat-qa-automation-android/src/test/java/com/qa/runners
 
+    - uses: actions/checkout@v2
+      with:
+        clean: false
 
     - name: list app folder before QA script
       run: |
-               ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-               ls -la ../../../../../../../home/runner/work/onbeatcicd/onbeatcicd/app/build
-               ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-               chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-               chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-               ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-               ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+          ls -la ../../../../../../../home/runner/work/onbeatcicd/onbeatcicd/app/build
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
 
-
-    - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
