--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,30 +35,21 @@ jobs:
           name: app
           path: app/build/outputs/apk/debug/app-debug.apk
 
-    - name: Download APK
-      uses: actions/download-artifact@v1
-      id: download
-      with:
-          name: app
-          path: /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-
-    - name: list app folder
-      run: |
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#    - name: Download APK
+#      uses: actions/download-artifact@v1
+#      id: download
+#      with:
+#          name: app
+#          path: /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
 
 #    - name: list app folder
 #      run: |
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
+#        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
 
     - name: Open and list sub-dir
       run: |
@@ -68,16 +59,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         clean: false
-
-    - name: list app folder before QA script
-      run: |
-          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-          ls -la ../../../../../../../home/runner/work/onbeatcicd/onbeatcicd/app/build
-          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-          ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
 
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
@@ -90,27 +71,6 @@ jobs:
             npm install -g appium@v1.20.2
             appium -v
             appium &>/dev/null &
-
-
-#    - name: list app folder before QA script
-#      run: |
-#          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-#          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-#          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-#          chmod +x /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources/app-debug.apk
-#          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android
-#          ls -la /home/runner/work/onbeatcicd/onbeatcicd/onbeat-qa-automation-android/src/main/resources
-
-    - name: list app folder before QA script
-      run: |
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la ../../../../../../../home/runner/work/onbeatcicd/onbeatcicd/app/build
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        chmod +x /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug/app-debug.apk
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app
-        ls -la /home/runner/work/onbeatcicd/onbeatcicd/app/build/outputs/apk/debug
-
 
     - name: QA Tests
       uses: reactivecircus/android-emulator-runner@v2
